# chargepoint-lib

./: .gitignore  API_DISCOVERY.md  GOOGLE_HOME_SETUP.md  README.md  charge_github.py  chargepoint_api.py  classify_vehicle.py  collect_session_data.py  debug_plan.md  fetch_session_details.py  generate_report.py  history.html  index.html  pyproject.toml  test_dal_session.py  test_populate_cache.py  verify_integration.sh
.github/: copilot-instructions.md
.github/workflows/: charge-ev.yml  check-charger-status.yml  collect-session-data.yml  monitor-sessions.yml  monthly-cache-update.yml  nightly-charger-check.yml  start-charging-now.yml  update-cache.yml
_includes/: analytics.html
_layouts/: default.html  post.html
_posts/: 2026-01-09-ai-as-code-translator-and-debugger.html  2026-01-09-data-collection-for-vehicle-intelligence.html  2026-01-09-designing-with-ai-the-solution-space.html  2026-01-09-respecting-the-rate-plan.html  2026-01-09-standing-on-community-shoulders.html  2026-01-09-the-6am-problem.html  2026-01-09-two-paths-same-goal.html
blog/: index.html
chargepoint_dal/: dal.py
classifier_tool/: cli.py  core.py  utils.py
data/: last_session.json  session_vehicle_map.json  vehicle_config.json
data/cache/: chargepoint_dal_cache.json
docs/: DATA_DICTIONARY.md  SCHEMA.md  VEHICLE_IDENTIFICATION_PROJECT.md  dashboard.html  dashboard.js  label.html
docs/blog/: index.html
gui/: README.md  __init__.py  __main__.py  app.py  controller.py  main.py  model.py  tk_dashboard.py
gui/view/: __init__.py  dashboard.js  (+2 more)
tools/: manual_curl_reference.txt
(+21 files in other folders)
